--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- header section-->
     <div class="header">
         <div class="left-container">
-            <div class="header-image"><img src="./images/icon-check.png" alt="icon-check"></div>
+            <div><img class="header-image" src="./images/icon-check.png" alt="icon-check"></div>
             <div class="header-title">Pomofocus</div>
         </div>
         <ul>
-            <li><button>Report</button></li>
-            <li><button>Settings</button></li>
-            <li><img src="./images/raccoon.jpg" alt="profile-image"></li>
+            <li><button class="header-button">Report</button></li>
+            <li><button class="header-button">Settings</button></li>
+            <li><img class="profile-image" src="./images/raccoon.jpg" alt="profile-image"></li>
         </ul>
     </div>
     <hr>
