--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div>Long Break</div>
         </div>
         <div class="counter-countdown">25:00</div>
-        <div class="counter-button"><button>START</button></div>
+        <div><button class="counter-button">START</button></div>
     </div>
     <!-- footer counter -->
     <div class="footer-counter">
