--- a/index.html
+++ b/index.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pomodoro</title>
 
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <!-- header section-->
     <div class="header">
-        <div class="left-container">
-            <div><img class="header-image" src="./images/icon-check.png" alt="icon-check"></div>
-            <div class="header-title">Pomofocus</div>
+      <div class="left-container">
+        <div>
+          <img
+            class="header-image"
+            src="./images/icon-check.png"
+            alt="icon-check"
+          />
         </div>
-        <ul>
-            <li><button class="header-button">Report</button></li>
-            <li><button class="header-button">Settings</button></li>
-            <li><img class="profile-image" src="./images/raccoon.jpg" alt="profile-image"></li>
-        </ul>
+        <div class="header-title">Pomofocus</div>
+      </div>
+      <ul>
+        <li><button class="header-button">Report</button></li>
+        <li><button class="header-button">Settings</button></li>
+        <li>
+          <img
+            class="profile-image"
+            src="./images/raccoon.jpg"
+            alt="profile-image"
+          />
+        </li>
+      </ul>
     </div>
-    <hr>
+    <hr />
     <!-- counter section -->
     <div class="counter-container">
-        <div class="counter-header">
-            <div>Pomodoro</div>
-            <div>Short Break</div>
-            <div>Long Break</div>
-        </div>
-        <div class="counter-countdown">25:00</div>
-        <div><button class="counter-button">START</button></div>
+      <div class="counter-header">
+        <div>Pomodoro</div>
+        <div>Short Break</div>
+        <div>Long Break</div>
+      </div>
+      <div class="counter-countdown">25:00</div>
+      <div class="counter-button"><button>START</button></div>
     </div>
     <!-- footer counter -->
-    <div class="footer-counter">
-        <div class="pomos-completed">#10</div>
-        <div class="pomos-taks">10 hours/ 24 pomodoros</div>
+    <div class="footer-container">
+      <div class="pomos-completed">#10</div>
+      <div class="pomos-taks">10 hours/ 24 pomodoros</div>
     </div>
-</body>
+  </body>
 </html>
