--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pomodoro</title>
 
     <link rel="stylesheet" href="./style.css" />
+    <script src="./scrip.js" defer></script>
   </head>
   <body>
     <!-- header section-->
