Create new containers

--- a/index.html
+++ b/index.html
@@ -50,5 +50,25 @@
       <div class="pomos-completed">#10</div>
       <div class="pomos-taks">10 hours/ 24 pomodoros</div>
     </div>
+
+    <!-- taks container -->
+    <div class="taks-container">
+      <div class="taks-container-1">
+        <div>Taks</div>
+        <button></button>
+      </div>
+
+      <div class="taks-container 2">
+        <div></div>
+        <div class="new-taks"></div>
+        <div class="counter-taks">0/0</div>
+        <button></button>
+      </div>
+
+      <div>Add Taks</div>
+
+      <!-- summary -->
+      <div>Pomos:4/20 Finish At:02:22 (9.9h)</div>
+    </div>
   </body>
 </html>
