--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <!-- header section-->
-    <div class="header">
-      <div class="left-container">
+    <div class="header-container">
+      <div class="header-left-container">
         <div>
           <img
             class="header-image"
@@ -23,8 +23,8 @@
         <div class="header-title">Pomofocus</div>
       </div>
       <ul>
-        <li><button class="header-button">Report</button></li>
-        <li><button class="header-button">Settings</button></li>
+        <li><button class="header-button report-button">Report</button></li>
+        <li><button class="header-button settings-button">Settings</button></li>
         <li>
           <img
             class="profile-image"
