Refactor counter container section

--- a/index.html
+++ b/index.html
@@ -13,40 +13,30 @@
     <!-- header section-->
     <div class="header-container">
       <div class="header-left-container">
-        <div>
-          <img
-            class="header-image"
-            src="./images/icon-check.png"
-            alt="icon-check"
-          />
-        </div>
+        <div><img class="header-image" src="./images/icon-check.png" alt="icon-check"/></div>
         <div class="header-title">Pomofocus</div>
       </div>
-      <ul>
-        <li><button class="header-button report-button">Report</button></li>
-        <li><button class="header-button settings-button">Settings</button></li>
-        <li>
-          <img
-            class="profile-image"
-            src="./images/raccoon.jpg"
-            alt="profile-image"
-          />
-        </li>
-      </ul>
-    </div>
-    <hr />
+      <div class="header-right-container">
+        <span><button class="header-button report-button">Report</button></span>
+        <span><button class="header-button settings-button">Settings</button></span>
+        <span><img class="profile-image" src="./images/raccoon.jpg" alt="profile-image"/></span>
+      </div>
+
+      <hr />
+
     <!-- counter section -->
     <div class="counter-container">
       <div class="counter-header">
-        <div>Pomodoro</div>
-        <div>Short Break</div>
-        <div>Long Break</div>
+        <span>Pomodoro</span>
+        <span>Short Break</span>
+        <span>Long Break</span>
       </div>
       <div class="counter-countdown">25:00</div>
       <div class="counter-button"><button>START</button></div>
     </div>
-    <!-- footer counter -->
-    <div class="footer-container">
+
+    <!-- score counter -->
+    <div class="score-container">
       <div class="pomos-completed">#10</div>
       <div class="pomos-taks">10 hours/ 24 pomodoros</div>
     </div>
@@ -58,7 +48,7 @@
         <button></button>
       </div>
 
-      <div class="taks-container 2">
+      <div class="taks-container-2">
         <div></div>
         <div class="new-taks"></div>
         <div class="counter-taks">0/0</div>
