--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pomodoro</title>
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css"/>
     <script src="./scrip.js" defer></script>
+    <link rel="shortcut icon" href="./images/favicon-pomodoro.ico" type="image/x-icon">
   </head>
   <body>
     <!-- header section-->
